# sirius

./: .env.example  Makefile  README.md  nuxt.config.ts  package-lock.json  package.json  pubspec.yaml  pyproject.toml  tailwind.config.js  tsconfig.json
api/: .env_example  .gitignore  __main__.py  alembic.ini  config.py  main.py  pyproject.toml  settings.py
api/alembic/: env.py
api/alembic/versions/: 1dbe2da0a9ca_.py  241b6d80866d_test.py  41fbcadf6b93_.py  470988a7b36b_.py  5d4b2cefa583_.py  97dd751fdef9_.py
api/alembic_migrations/: env.py
api/alembic_migrations/versions/: 2ea7e5ed97af_описание_миграции.py  48e32df41eb8_.py  492de05c4368_.py  7b2687f5dc1e_.py
api/common/: log.py
api/configuration/: server.py
api/configuration/routes/: __init__.py
api/core/: conf.py  path_conf.py  registr.py
api/database/: db_mysql.py  db_postgresql.py  engine.py
api/database/crud/: stations_crud.py
api/database/models/: __init__.py  base_models.py  point_models.py  types.py  user_models.py
api/database/repos/: __init__.py  base.py  car_wash.py  point.py  users.py
api/enums/: db.py
api/handlers/: __init__.py
api/handlers/users/: __init__.py  car_wash.py  (+3 more)
api/middleware/: __init__.py  access_middle.py
api/middlewares/: __init__.py  acces.py
api/models/: __init__.py  addmissions.py  base.py  doctors.py  lab.py  pont.py  stations.py  user.py
api/schemas/: __init__.py  auth.py  orders.py  point.py
api/services/: __init__.py  summarize.py  transcribe.py  yandex_disk.py
api/templates/: errors.html
api/utils/: connect_to_services.py  log.py  repo.py
(+58 files in other folders)
