[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Puffa <Puffa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
fastapi-pagination = "^0.12.31"
fastapi-limiter = "^0.1.6"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
asyncmy = "^0.2.9"
fastapi-utils = "^0.7.0"
alembic = "^1.14.0"
typing-inspect = "^0.9.0"
aiohttp = "^3.10.10"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-multipart = "^0.0.17"
yadisk = "^3.1.0"
requests = "^2.32.3"

speechrecognition = "^3.11.0"
pydub = "^0.25.1"
pocketsphinx = "^5.0.3"
transformers = "^4.46.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
